# algoritmi_harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  määrittelydokumentti.md  pyproject.toml  viikkoraportti1.md
dokumentaatio/: stats.txt  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti2.md  viikkoraportti3.md  viikkoraportti5.md
src/: main.py  minesweeper.py  run_dssp.py  run_stats.py
src/minesweeper/: gui.py  minesweeper.py  minesweeperapp.py
src/testing/: test_dssp.py  test_minesweeper.py
src/utils/: dssp.py  firstmove.py  random_square.py
