[tool.poetry]
name = "algoritmi-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Vilho Heikkinen <vilho.heikkinen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
argparse = "^1.4.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
